--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
 }
 body {
-  font: 16px/1.5, serif;
+  font-family: serif;
+  font-size: 16px;
   margin: 0 auto;
   max-width: 66ch;
   padding: 1rem;
