--- a/index.css
+++ b/index.css
@@ -73,5 +73,6 @@ input {
   padding: 10px 20px;
   margin: 2px 0;
   font-size: 16px;
+  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   text-transform: uppercase;
 }
